build/log/idf_py_stderr_output_77869
Command: make -j 6 all
/home/bmetal/esp-idf/uartTest/main/uartTest.c: In function 'uart_rcv':
/home/bmetal/esp-idf/uartTest/main/uartTest.c:50:17: error: 'status' is used uninitialized [-Werror=uninitialized]
   50 |                 switch(status)
      |                 ^~~~~~
/home/bmetal/esp-idf/uartTest/main/uartTest.c:39:21: note: 'status' was declared here
   39 |         enum Status status;
      |                     ^~~~~~
cc1: all warnings being treated as errors
configdep.c:648: in main: exec_process exited with error code: 1
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:79: esp-idf/main/CMakeFiles/__idf_main.dir/uartTest.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:9466: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
